--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/MENU/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>الزعيم - Zaeem Restaurant</title>
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/MENU/src/main.jsx"></script>
-  </body>
+<html lang="ar">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0;url=home.html">
+  <title>تحويل إلى الصفحة الرئيسية</title>
+</head>
+<body>
+  <p>جاري التحويل إلى <a href="home.html">الصفحة الرئيسية</a>...</p>
+</body>
 </html>
