Fix breadcrumb in menu.html to correctly show Home/Menu

--- a/menu.html
+++ b/menu.html
@@ -44,9 +44,9 @@
   <div class="page-indicator">
     <div class="container">
       <div class="breadcrumb">
-        <a href="home.html">الرئيسية</a>
+        <a href="home.html" id="breadcrumb-home">الرئيسية</a>
         <span class="separator">/</span>
-        <span class="current-page">قائمة الطعام</span>
+        <span class="current-page" id="breadcrumb-menu">قائمة الطعام</span>
       </div>
     </div>
   </div>
