--- a/menu.html
+++ b/menu.html
@@ -54,8 +54,7 @@
   <!-- Category Tabs -->
   <div class="container">
     <div class="category-tabs">
-      <button class="category-tab active" data-category="all">الكل</button>
-      <button class="category-tab" data-category="plates">علب وأصناف</button>
+      <button class="category-tab active" data-category="plates">علب وأصناف</button>
       <button class="category-tab" data-category="sides">أصناف جانبية</button>
       <button class="category-tab" data-category="sandwiches">سندوتشات</button>
     </div>
