--- a/menu.html
+++ b/menu.html
@@ -51,15 +51,15 @@
     </div>
   </div>
 
-  <!-- Category Tabs -->
-  <div class="container">
-    <div class="category-tabs">
-      <button class="category-tab active" data-category="plates">علب وأصناف</button>
-      <button class="category-tab" data-category="sides">أصناف جانبية</button>
-      <button class="category-tab" data-category="sandwiches">سندوتشات</button>
-    </div>
+  <!-- Category Tabs - Fixed position -->
+  <div class="category-tabs">
+    <button class="category-tab active" data-category="plates">الأطباق</button>
+    <button class="category-tab" data-category="sides">الجانبية</button>
+    <button class="category-tab" data-category="sandwiches">السندوتشات</button>
+  </div>
 
-    <!-- Menu Sections -->
+  <!-- Menu Sections -->
+  <div class="container">
     <div id="menu-container"></div>
   </div>
 
