fix download bug

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 <body>
   <!-- Download Menu Popup Icon -->
   <div id="menuDownloadPopup">
-    <a href="images/menu-image.jpg" download="منيو-الزعيم.jpg" title="تحميل المنيو كصورة">
+    <a href="images/menu-image.png" download="منيو-الزعيم.png" title="تحميل المنيو كصورة">
       <i class="fa-solid fa-arrow-down"></i>
       
     </a>
